syntax = "proto2";

package NYT.NApi.NNative.NProto;

import "yt_proto/yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqCopySynchronizablePortalAttributes
{
    required NYT.NProto.TGuid source_node_id = 1;
    required NYT.NProto.TGuid destination_node_id = 2;
}

////////////////////////////////////////////////////////////////////////////////

message TReqSetAttributeOnTransactionCommit
{
    required NYT.NProto.TGuid node_id = 1;
    required string attribute = 2;
    required bytes value = 3; // YSON
}

////////////////////////////////////////////////////////////////////////////////
